Adding a few files and cleaning up some Mac Legacy CR files

--- a/alt-style.html
+++ b/alt-style.html
@@ -1,1 +1,40 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Alternate Stylesheets</title><link rel="alternate stylesheet" href="alt-style-1.css" type="text/css" title="Grape World"><link rel="alternate stylesheet" href="alt-style-2.css" type="text/css" title="On Fire!"><link rel="alternate stylesheet" href="alt-style-3.css" type="text/css" title="kaleidoscope"></head><body id="www-meyerweb-com" class="css"><h1>Alternate Stylesheets</h1><p>Lorem ipsum, dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p><h3>How to Choose an Alternate Stylesheet</h3><p>This varies by browser.  At the moment, only Netscape Navigator 6 supports this natively, so the directions are for that browser.  They're pretty simple:</p><ol><li>Select the "View" menu.<li>Select the "Use Stylesheet" submenu<li>Select the stylesheet you wish to apply to this document.</ol><p>Note that the titles shown in the "Choose Stylesheet" submenu are specified in the <code>title</code> attribute of the <code>LINK</code> element.  Please feel free to examin the source of this document for further information.</p><p>For the sake of completeness, I'll include some links which will get different styles in each alternate stylesheet:</p><ul><li><a href="http://www.meyerweb.com/">meyerweb home page</a><li><a href="http://www.webreview.com/style/">Style Sheets Reference Guide</a><li><a href="http://www.w3.org/">W3C</a></ul><p>Once you've picked one of the alternate stylesheets for this page, go to the <a href="alt-style-2.html"><strong>next page</strong></a>, which links in the same alternate stylesheets.  Notice that it starts out with the default stylesheet instead of the alternate that was picked for this page.  Even worse, when you come back here odds are you'll be back to the default styles.  This is why Javascript-and-cookie-based style pickers are gaining in popularity.</p><!--#include virtual="/inc/extra.html" --><!--#include virtual="/eric/redesignwatch/latest.html" --><!--#include virtual="/inc/page-end.html" --></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<html>
+<head>
+<title>Alternate Stylesheets</title>
+<link rel="alternate stylesheet" href="alt-style-1.css" type="text/css" title="Grape World">
+<link rel="alternate stylesheet" href="alt-style-2.css" type="text/css" title="On Fire!">
+<link rel="alternate stylesheet" href="alt-style-3.css" type="text/css" title="kaleidoscope">
+</head>
+<body id="www-meyerweb-com" class="css">
+<h1>Alternate Stylesheets</h1>
+<p>
+Lorem ipsum, dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+</p>
+<h3>How to Choose an Alternate Stylesheet</h3>
+<p>
+This varies by browser.  At the moment, only Netscape Navigator 6 supports this natively, so the directions are for that browser.  They're pretty simple:
+</p>
+<ol>
+<li>Select the "View" menu.
+<li>Select the "Use Stylesheet" submenu
+<li>Select the stylesheet you wish to apply to this document.
+</ol>
+<p>
+Note that the titles shown in the "Choose Stylesheet" submenu are specified in the <code>title</code> attribute of the <code>LINK</code> element.  Please feel free to examin the source of this document for further information.
+</p>
+<p>
+For the sake of completeness, I'll include some links which will get different styles in each alternate stylesheet:
+</p>
+<ul>
+<li><a href="http://www.meyerweb.com/">meyerweb home page</a>
+<li><a href="http://www.webreview.com/style/">Style Sheets Reference Guide</a>
+<li><a href="http://www.w3.org/">W3C</a>
+</ul>
+<p>
+Once you've picked one of the alternate stylesheets for this page, go to the <a href="alt-style-2.html"><strong>next page</strong></a>, which links in the same alternate stylesheets.  Notice that it starts out with the default stylesheet instead of the alternate that was picked for this page.  Even worse, when you come back here odds are you'll be back to the default styles.  This is why Javascript-and-cookie-based style pickers are gaining in popularity.
+</p>
+
+<!--#include virtual="/inc/page-end.html" -->
+</body>
+</html>
